--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ tmp_trainer/
 lora_binding_sites/
 esm2_t6_8M-lora-binding-sites_2024-05-13_00-51-34/
 esm2_t6_8M-lora-binding-sites_2024-05-13_01-52-36/
+.ipynb_checkpoints/
